-
Bug
-
Resolution: Done
-
P2: Important
-
5.14.2, 5.15.0
-
-
6a31a7b024679c4dcbcf8120b06db0a17fa219ce (qt/qtbase/dev) ed8cbdf07ff4797f388f8c509340b0df9ba4a1b3 (qt/qtbase/5.15)
Catwalk font (https://www.myfonts.com/fonts/stockbucket/catwalk) not properly rendered with freetype font engine. The font works fine with default font engine.
Steps to reproduce the issue:
- build and run the attached project with -platform windows:fontengine=freetype
| For Gerrit Dashboard: QTBUG-84409 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 302085,4 | Support winding fonts like Windows does | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 302778,3 | Support winding fonts like Windows does | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |