Support winding fonts like Windows does

Map Latin-1 characters to the Winding unicode entries for symbol fonts
to render those fonts like Windows does.

Pick-to: 5.15
Fixes: QTBUG-84409
Change-Id: I60b81d93412d970d25a98606545773db6c8ab723
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>